--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@angular/router": "^17.0.0",
     "@fortawesome/fontawesome-free": "^6.5.2",
     "rxjs": "~7.8.0",
+    "sweetalert2": "^11.10.8",
     "swiper": "^11.1.1",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.2"
